--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,10 +31,10 @@ test_isolation:
    - mvn test -P Isolation
  except:
    - master
-  
+
 test_integration:
  stage: test
- script: 
+ script:
    - mvn test -P Integration
  only:
    - master
@@ -45,7 +45,7 @@ sonar_publish_job:
     - mvn -Djacoco.destFile=$JACOCO_AGENT clean org.jacoco:jacoco-maven-plugin:0.7.8:prepare-agent install
     - mvn -X -Djacoco.dataFile=$JACOCO_AGENT -Djacoco.outputDirectory=./jacoco_ut org.jacoco:jacoco-maven-plugin:report
   script:
-    - mvn --batch-mode verify jxr:jxr pmd:pmd sonar:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_USER_TOKEN -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.jacoco.reportPath=$JACOCO_AGENT -Dsonar.junit.reportPaths=target/surefire-reports
+    - mvn --batch-mode verify jxr:jxr pmd:pmd sonar:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_USER_TOKEN} -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.jacoco.reportPath=$JACOCO_AGENT -Dsonar.junit.reportPaths=target/surefire-reports
   coverage: /Total.*?([0-9]{1,3})%/
   only:
     - develop
@@ -57,7 +57,7 @@ sonar_preview_job:
     - mvn -Djacoco.destFile=$JACOCO_AGENT clean org.jacoco:jacoco-maven-plugin:0.7.8:prepare-agent install
     - mvn -X -Djacoco.dataFile=$JACOCO_AGENT -Djacoco.outputDirectory=./jacoco_ut org.jacoco:jacoco-maven-plugin:report
   script:
-    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_USER_TOKEN -Dsonar.analysis.mode=preview -Dsonar.gitlab.project_id=$CI_PROJECT_PATH -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref_name=$CI_BUILD_REF_NAME -Dsonar.gitlab.user_token=$GITLAB_USER_TOKEN -Dsonar.gitlab.url="https://gitlab.inf.uva.es" -Dsonar.issuesReport.console.enable=true -Dsonar.gitlab.only_issue_from_commit_line=true -Dsonar.gitlab.comment_no_issue=true -Dsonar.gitlab.disable_global_comment=true
+    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_USER_TOKEN} -Dsonar.analysis.mode=preview -Dsonar.gitlab.project_id=$CI_PROJECT_PATH -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref_name=$CI_BUILD_REF_NAME -Dsonar.gitlab.user_token=$GITLAB_USER_TOKEN -Dsonar.gitlab.url="https://gitlab.inf.uva.es" -Dsonar.issuesReport.console.enable=true -Dsonar.gitlab.only_issue_from_commit_line=true -Dsonar.gitlab.comment_no_issue=true -Dsonar.gitlab.disable_global_comment=true
   coverage: /Total.*?([0-9]{1,3})%/
   except:
     - develop
@@ -83,4 +83,3 @@ deploy:
     - mvn -$MAVEN_CLI_OPTS deploy
   only:
     - master
-
