Añadido el perfil de test de secuencia en test, pom e yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,3 +32,8 @@ test_integration:
  stage: test
  script:
    - mvn test -P Integration
+
+test_sequence:
+ stage: test
+ script:
+   - mvn test -P Sequence
